--- a/basu/DESCRIPTION
+++ b/basu/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: basu
 Type: Package
 Title: Interactive Sample Size Calculator
-Version: 0.2.1
-Author@R: person("Kristin", "Chen", email = "kristinchen@westat.com",
-                  role = c("aut",cre"))
-Maintainer@R: person("Kristin", "Chen", email = "kristinchen@westat.com",
-                      role = c("cre"))
+Version: 0.3.1
+Author@R: as.person(c(
+                      "Gonzalo Rivero <gonzalorivero@westat.com> [aut, cre]",
+                      "Kristin Chen <kristinchen@westat.com> [cre]"))
+Maintainer@R: as.person("Kristin Chen <kristinchen@westat.com> [cre]")
 Description: Customized vector-allowed sample size calculator using the \\code{pwr} as backend to expose it through OpenCPU.
-License: GPL
+Depends: R (> 3.1.0)
+Imports: pwr
+License: Proprietary
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
